--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ api_key.txt
 deepseek_api_key.txt
 gemini_api_key.txt
 llama_api_key.txt
-# gpt_api_key.txt
+gpt_api_key.txt
 
 testing.py
 prompt.py
